-fixed some column sizing issues related to TC-925 -resolves TC-960 -adds the '.keep' class for button span which preserves the text on mobile. Currently used in the Alert details expansion

--- a/css/scss/base/_buttons.scss
+++ b/css/scss/base/_buttons.scss
@@ -56,7 +56,11 @@
         @include swb-medium {
             display: none;
         }
+        &.keep {
+            display: initial;
+        }
     }
+    
 }
 
 .btn {
